@@ -1,5 +1,9 @@
 2006-09-03 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/GParted_Core.cc: added progressfeedback to Delete()
+
+2006-09-03 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/GParted_Core.h,
 	  src/GParted_Core.cc: more fixes related to moving..
 
